--- a/resources/jsons/projects.json
+++ b/resources/jsons/projects.json
@@ -4,7 +4,7 @@
 		{
 			"date": 2023,
 			"type": "Personal Project",
-			"title": "Generative Adversarial Network",
+			"title": "Generative Adversarial Network Darcy",
 			"description": "This project is a deep convolutional generative adversarial network that can create high quality images from a random seed like portraits, animals, drawings and more...",
 			"tags":
 			[
